--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.5.2
+Brotli==1.0.9
 certifi==2022.9.14
 charset-normalizer==2.1.1
 click==8.1.3
 Flask==2.2.2
+Flask-Compress==1.12
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.3
 idna==3.4
