--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.5.2
+attrs==22.1.0
 Brotli==1.0.9
 certifi==2022.9.14
 charset-normalizer==2.1.1
@@ -9,11 +10,28 @@ Flask-SQLAlchemy==2.5.1
 greenlet==1.1.3
 idna==3.4
 importlib-metadata==4.12.0
+iniconfig==1.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+packaging==21.3
+pluggy==1.0.0
+proxy-tools==0.1.0
+py==1.11.0
+pycairo==1.21.0
+PyGObject==3.42.2
+pyparsing==3.0.9
+PyQt5==5.15.7
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.11.0
+PyQtWebEngine==5.15.6
+PyQtWebEngine-Qt5==5.15.2
+pytest==7.1.3
+pywebview==3.6.3
+QtPy==2.2.0
 requests==2.28.1
 SQLAlchemy==1.4.41
+tomli==2.0.1
 urllib3==1.26.12
 Werkzeug==2.2.2
 zipp==3.8.1
